--- a/TeaEcommerceWebsite/about/faq's.html
+++ b/TeaEcommerceWebsite/about/faq's.html
@@ -46,7 +46,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../tea.html">All Tea Products</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Tea Catagories</li>
+                                <li class="dropdown-header">Tea Categories</li>
                                 <li><a href="../tea/black-tea.html">Black Tea</a></li>
                                 <li><a href="../tea/green-tea.html">Green Tea</a></li>
                                 <li><a href="../tea/exotic-tea.html">Exotic Tea</a></li>
@@ -60,7 +60,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../accessories.html">All Accessories</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Catagories</li>
+                                <li class="dropdown-header">Categories</li>
                                 <li><a href="../accessories/tea-pots.html">Tea Pots</a></li>
                                 <li><a href="../accessories/tea-sets.html">Tea Sets</a></li>
                             </ul>
@@ -102,26 +102,26 @@
                     <legend><h1>Frequently Asked Questions</h1></legend>
                     <h2 class="text-size-md">1.&nbsp;Where does the tea come from?</h2>
                     <p class="indent col-sm-offset-0">
-                        Our tea are wholsealed from various different buyers around the world.
+                        Our tea are wholesaled from various different buyers around the world.
                     </p>
                     <h2 class="text-size-md">2.&nbsp;Does Kooky for Tea have retail stores?</h2>
                     <p class="indent col-sm-offset-0">
-                        Unfortanetly, we do not have any retail stores at the moment.
+                        Unfortunately, we do not have any retail stores at the moment.
                     </p>
                     <h2 class="text-size-md">3.&nbsp;What if I do not like what I ordered?</h2>
                     <p class="indent col-sm-offset-0">
-                        Correct orders are non-refundable and we apolizge you did not like the product(s).
+                        Correct orders are non-refundable and we apologize you did not like the product(s).
                     </p>
                     <h2 class="text-size-md">4.&nbsp;I didn't receive what I ordered. What do I do now?</h2>
                     <p class="indent col-sm-offset-0">
-                        We sincerly apoligize that you did not receive what you ordered. To fix the problem,
+                        We sincerely apologize that you did not receive what you ordered. To fix the problem,
                         please go to our <a href="../contact-us.html">contact page</a> and we will handle the rest!
                     </p>
                     <h2 class="text-size-md">5.&nbsp;Can Kooky for Tea's tea help get rid of under eye bags or
-                        could be used for any other natural remdies?</h2>
+                        could be used for any other natural remedies?</h2>
                     <p class="indent col-sm-offset-0">
                         Kooky for Tea can not say for sure that it will cure illnesses or any other issues.
-                        Howerver, try it out and see! If it does help your problem please let us know!
+                        However, try it out and see! If it does help your problem please let us know!
                     </p>
                     <h2 class="text-size-md">6.&nbsp;Do you guys ship outside the United States?</h2>
                     <p class="indent col-sm-offset-0">
@@ -135,7 +135,7 @@
                     </p>
                     <h2 class="text-size-md">8.&nbsp;Is this a real e-commerce store?</h2>
                     <p class="indent col-sm-offset-0">
-                        This is not a real e-commerce store and all of the content on the website is fictionial. Sorry!
+                        This is not a real e-commerce store and all of the content on the website is fictional. Sorry!
                     </p>
                 </fieldset>
             </main>
