--- a/TeaEcommerceWebsite/about/shipping&returns.html
+++ b/TeaEcommerceWebsite/about/shipping&returns.html
@@ -46,7 +46,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../tea.html">All Tea Products</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Tea Catagories</li>
+                                <li class="dropdown-header">Tea Categories</li>
                                 <li><a href="../tea/black-tea.html">Black Tea</a></li>
                                 <li><a href="../tea/green-tea.html">Green Tea</a></li>
                                 <li><a href="../tea/exotic-tea.html">Exotic Tea</a></li>
@@ -60,7 +60,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../accessories.html">All Accessories</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Catagories</li>
+                                <li class="dropdown-header">Categories</li>
                                 <li><a href="../accessories/tea-pots.html">Tea Pots</a></li>
                                 <li><a href="../accessories/tea-sets.html">Tea Sets</a></li>
                             </ul>
@@ -104,12 +104,12 @@
                         <h2>Shipping</h2>
                         <h3>United States and Canada Shipping</h3>
                         <p>
-                         Orders over $40 to the United States and Canada are free via USPS. Small orders ship for a flate rate of $5.
+                         Orders over $40 to the United States and Canada are free via USPS. Small orders ship for a flat rate of $5.
                          United States order take one to four business days to arrive once your complete order is in stock.
                         </p>
                         <h3>International Shipping</h3>
                         <p>
-                         Orders over $90 to the rest of the world are free via USPS. Small orders ship for a flate rate of $20.
+                         Orders over $90 to the rest of the world are free via USPS. Small orders ship for a flat rate of $20.
                          United States order take six to twelve business days to arrive once your complete order is in stock.
                         </p>
                     </section>
@@ -117,7 +117,7 @@
                 <div class="row">
                     <section class="col-sm-12" id="returns">
                         <h2>Returns</h2>
-                        <p>If your item(s) was deliverd to you damaged, you can contact us at our <a href="contact.html">contact page</a>
+                        <p>If your item(s) was delivered to you damaged, you can contact us at our <a href="contact.html">contact page</a>
                             and we will re-send you what you ordered. If you didn't like what you ordered or it wasn't
                         what you expected, after you return the items you will have store credit.</p>
 
