--- a/TeaEcommerceWebsite/about.html
+++ b/TeaEcommerceWebsite/about.html
@@ -46,7 +46,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="all-tea-products.html">All Tea Products</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Tea Catagories</li>
+                                <li class="dropdown-header">Tea Categories</li>
                                 <li><a href="tea/black-tea.html">Black Tea</a></li>
                                 <li><a href="tea/green-tea.html">Green Tea</a></li>
                                 <li><a href="tea/exotic-tea.html">Exotic Tea</a></li>
@@ -60,7 +60,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="accessories.html">All Accessories</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Catagories</li>
+                                <li class="dropdown-header">Categories</li>
                                 <li><a href="accessories/tea-pots.html">Tea Pots</a></li>
                                 <li><a href="accessories/tea-sets.html">Tea Sets</a></li>
                             </ul>
@@ -109,8 +109,8 @@
                           to create a e-commerce website for people who are eccentric and
                           have a flair for interesting accessories as well as tea.
                       <br/><br />Kooky for Tea looks all around the world in search for exotic and eccentric items associated with
-                       tea for their customers. We also deliver our goodies all around the world, so know one is expempt. Everyone
-                   deserves to have a taste of our esqusite tea and our eqlolent tea acessiories.</p>
+                       tea for their customers. We also deliver our goodies all around the world, so know one is exempt. Everyone
+                   deserves to have a taste of our exquisite tea and our eloquent tea accessories.</p>
                       <p></p>
                   </div>
                 </section>
