--- a/TeaEcommerceWebsite/contact-us.html
+++ b/TeaEcommerceWebsite/contact-us.html
@@ -46,7 +46,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="tea.html">All Tea Products</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Tea Catagories</li>
+                                <li class="dropdown-header">Tea Categories</li>
                                 <li><a href="tea/black-tea.html">Black Tea</a></li>
                                 <li><a href="tea/green-tea.html">Green Tea</a></li>
                                 <li><a href="tea/exotic-tea.html">Exotic Tea</a></li>
@@ -60,7 +60,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="accessories.html">All Accessories</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Catagories</li>
+                                <li class="dropdown-header">Categories</li>
                                 <li><a href="accessories/tea-pots.html">Tea Pots</a></li>
                                 <li><a href="accessories/tea-sets.html">Tea Sets</a></li>
                             </ul>
@@ -101,7 +101,7 @@
             <main role="main">
                 <article role="article">
                     <div class="content-container">
-                        <img class="img-responsive"src="assets/images/pexels-photo-264771.jpeg" alt="Just For You Photo with Decoritative Boxes">
+                        <img class="img-responsive"src="assets/images/pexels-photo-264771.jpeg" alt="Just For You Photo with Decorative Boxes">
                     </div><!-- content-container -->
 
                     <fieldset>
