--- a/TeaEcommerceWebsite/index.html
+++ b/TeaEcommerceWebsite/index.html
@@ -47,7 +47,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="tea.html">All Tea Products</a></li>
                             <li role="separator" class="divider"></li>
-                            <li class="dropdown-header" aria-label="Tea Catagories">Tea Catagories</li>
+                            <li class="dropdown-header" aria-label="Tea Categories">Tea Categories</li>
                             <li><a href="tea/black-tea.html">Black Tea</a></li>
                             <li><a href="tea/green-tea.html">Green Tea</a></li>
                             <li><a href="tea/exotic-tea.html">Exotic Tea</a></li>
@@ -61,7 +61,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="accessories.html">All Accessories</a></li>
                             <li role="separator" class="divider"></li>
-                            <li class="dropdown-header">Catagories</li>
+                            <li class="dropdown-header">Categories</li>
                             <li><a href="accessories/tea-pots.html">Tea Pots</a></li>
                             <li><a href="accessories/tea-sets.html">Tea Sets</a></li>
                         </ul>
