--- a/TeaEcommerceWebsite/accessories/tea-sets.html
+++ b/TeaEcommerceWebsite/accessories/tea-sets.html
@@ -46,7 +46,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../tea.html">All Tea Products</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Tea Catagories</li>
+                                <li class="dropdown-header">Tea Categories</li>
                                 <li><a href="../tea/black-tea.html">Black Tea</a></li>
                                 <li><a href="../tea/green-tea.html">Green Tea</a></li>
                                 <li><a href="../tea/exotic-tea.html">Exotic Tea</a></li>
@@ -60,7 +60,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../accessories.html">All Accessories</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Catagories</li>
+                                <li class="dropdown-header">Categories</li>
                                 <li><a href="tea-pots.html">Tea Pots</a></li>
                                 <li><a href="tea-sets.html">Tea Sets</a></li>
                             </ul>
