--- a/TeaEcommerceWebsite/accessories/tea-sets/timeless-tea-set.html
+++ b/TeaEcommerceWebsite/accessories/tea-sets/timeless-tea-set.html
@@ -46,7 +46,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../../tea.html">All Tea Products</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Tea Catagories</li>
+                                <li class="dropdown-header">Tea Categories</li>
                                 <li><a href="../../tea/black-tea.html">Black Tea</a></li>
                                 <li><a href="../../tea/green-tea.html">Green Tea</a></li>
                                 <li><a href="../../tea/exotic-tea.html">Exotic Tea</a></li>
@@ -60,7 +60,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../../accessories.html">All Accessories</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Catagories</li>
+                                <li class="dropdown-header">Categories</li>
                                 <li><a href="../tea-pots.html">Tea Pots</a></li>
                                 <li><a href="../tea-sets.html">Tea Sets</a></li>
                             </ul>
@@ -134,15 +134,15 @@
                                </h4>
                            </div><!-- panel-heading -->
                              <div id="collapse1" class="panel-collapse collapse">
-                               <div class="panel-body"><p>The tea set was designed to be durable and shouldn't go out of style since the name. </p>
+                               <div class="panel-body"><p>The tea set was designed to be durable and shouldn't go out of style since the name.</p>
                                 </div><!-- panel-body -->
                              </div><!--panel-collapse collapse -->
                          </div><!-- panel panel-default -->
                    </div><!-- panel-group col-sm-6 mobile-space -->
                     <form>
                         <div class="form-group col-sm-6">
-                            <label for="selectQuanity">Quanity</label>
-                            <select class="form-control" id="selectQuanity">
+                            <label for="selectQuantity">Quantity</label>
+                            <select class="form-control" id="selectQuantity">
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -292,7 +292,7 @@
                                                 </button>
                                             </div><!-- review-block-rate -->
                                             <div class="review-block-title">Nice</div>
-                                            <div class="review-block-description">I like thiis tea set. The tea pot itself is kind of heavy.</div>
+                                            <div class="review-block-description">I like this tea set. The tea pot itself is kind of heavy.</div>
                                         </div><!-- col-sm-9 -->
                                     </div><!-- row -->
                                 </div><!-- review-block -->
