--- a/TeaEcommerceWebsite/accessories/tea-sets/masterpiece-set.html
+++ b/TeaEcommerceWebsite/accessories/tea-sets/masterpiece-set.html
@@ -55,7 +55,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../../accessories.html">All Accessories</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Catagories</li>
+                                <li class="dropdown-header">Categories</li>
                                 <li><a href="../tea-pots.html">Tea Pots</a></li>
                                 <li><a href="../tea-sets.html">Tea Sets</a></li>
                             </ul>
@@ -129,15 +129,15 @@
                                </h4>
                            </div><!-- panel-heading -->
                              <div id="collapse1" class="panel-collapse collapse">
-                               <div class="panel-body"><p>The tea set was based off of the experience a designer had in India and wa broughht to life.</p>
+                               <div class="panel-body"><p>The tea set was based off of the experience a designer had in India and was brought to life.</p>
                                 </div><!-- panel-body -->
                              </div><!--panel-collapse collapse -->
                          </div><!-- panel panel-default -->
                    </div><!-- panel-group col-sm-6 mobile-space -->
                     <form>
                         <div class="form-group col-sm-6">
-                            <label for="selectQuanity">Quanity</label>
-                            <select class="form-control" id="selectQuanity">
+                            <label for="selectQuantity">Quantity</label>
+                            <select class="form-control" id="selectQuantity">
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
