--- a/TeaEcommerceWebsite/accessories/tea-sets/red-dragon-set.html
+++ b/TeaEcommerceWebsite/accessories/tea-sets/red-dragon-set.html
@@ -55,7 +55,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../../accessories.html">All Accessories</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Catagories</li>
+                                <li class="dropdown-header">Categories</li>
                                 <li><a href="../tea-pots.html">Tea Pots</a></li>
                                 <li><a href="../tea-sets.html">Tea Sets</a></li>
                             </ul>
@@ -136,8 +136,8 @@
                    </div><!-- panel-group col-sm-6 mobile-space -->
                     <form>
                         <div class="form-group col-sm-6">
-                            <label for="selectQuanity">Quanity</label>
-                            <select class="form-control" id="selectQuanity">
+                            <label for="selectQuantity">Quantity</label>
+                            <select class="form-control" id="selectQuantity">
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -288,7 +288,7 @@
                                                 </button>
                                             </div><!-- review-block-rate -->
                                             <div class="review-block-title">Its ok</div>
-                                            <div class="review-block-description">Its ok</div>
+                                            <div class="review-block-description">Its ok.</div>
                                         </div><!-- col-sm-9 -->
                                     </div><!-- row -->
                                 </div><!-- review-block -->
