--- a/TeaEcommerceWebsite/accessories/tea-pots/mcfancy-tea-pot.html
+++ b/TeaEcommerceWebsite/accessories/tea-pots/mcfancy-tea-pot.html
@@ -1,4 +1,4 @@
-../../assets/<!DOCTYPE>
+<!DOCTYPE>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -46,7 +46,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../../tea.html">All Tea Products</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Tea Catagories</li>
+                                <li class="dropdown-header">Tea Categories</li>
                                 <li><a href="../../tea/black-tea.html">Black Tea</a></li>
                                 <li><a href="../../tea/green-tea.html">Green Tea</a></li>
                                 <li><a href="../../tea/exotic-tea.html">Exotic Tea</a></li>
@@ -60,7 +60,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../../accessories.html">All Accessories</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Catagories</li>
+                                <li class="dropdown-header">Categories</li>
                                 <li><a href="../tea-pots.html">Tea Pots</a></li>
                                 <li><a href="../tea-sets.html">Tea Sets</a></li>
                             </ul>
@@ -141,8 +141,8 @@
                    </div><!-- panel-group col-sm-6 mobile-space -->
                     <form>
                         <div class="form-group col-sm-6">
-                            <label for="selectQuanity">Quanity</label>
-                            <select class="form-control" id="selectQuanity">
+                            <label for="selectQuantity">Quantity</label>
+                            <select class="form-control" id="selectQuantity">
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -271,7 +271,7 @@
                                         <div class="col-sm-3">
                                             <img src="http://dummyimage.com/60x60/666/ffffff&text=No+Image" class="img-rounded">
                                             <div class="review-block-name"><a href="#">Sally </a></div>
-                                            <div class="review-block-date">May 6, 2017<br/></div>
+                                            <div class="review-block-date">May 6, 2017<br></div>
                                         </div><!-- col-sm-3 -->
                                         <div class="col-sm-9">
                                             <div class="review-block-rate">
