--- a/TeaEcommerceWebsite/accessories/tea-pots/the-block-tea-pot.html
+++ b/TeaEcommerceWebsite/accessories/tea-pots/the-block-tea-pot.html
@@ -46,7 +46,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../../tea.html">All Tea Products</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Tea Catagories</li>
+                                <li class="dropdown-header">Tea Categories</li>
                                 <li><a href="../black-tea.html">Black Tea</a></li>
                                 <li><a href="../green-tea.html">Green Tea</a></li>
                                 <li><a href="../exotic-tea.html">Exotic Tea</a></li>
@@ -60,7 +60,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../../accessories.html">All Accessories</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Catagories</li>
+                                <li class="dropdown-header">Categories</li>
                                 <li><a href="../tea-pots.html">Tea Pots</a></li>
                                 <li><a href="../tea-sets.html">Tea Sets</a></li>
                             </ul>
@@ -138,8 +138,8 @@
                    </div><!-- panel-group col-sm-6 mobile-space -->
                     <form>
                         <div class="form-group col-sm-6">
-                            <label for="selectQuanity">Quanity</label>
-                            <select class="form-control" id="selectQuanity">
+                            <label for="selectQuantity">Quantity</label>
+                            <select class="form-control" id="selectQuantity">
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
