--- a/TeaEcommerceWebsite/tea/black-tea/fightin'-machine.html
+++ b/TeaEcommerceWebsite/tea/black-tea/fightin'-machine.html
@@ -46,7 +46,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../../tea.html">All Tea Products</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Tea Catagories</li>
+                                <li class="dropdown-header">Tea Categories</li>
                                 <li><a href="../black-tea.html">Black Tea</a></li>
                                 <li><a href="../green-tea.html">Green Tea</a></li>
                                 <li><a href="../exotic-tea.html">Exotic Tea</a></li>
@@ -60,7 +60,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../../accessories.html">All Accessories</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Catagories</li>
+                                <li class="dropdown-header">Categories</li>
                                 <li><a href="../../accessories/tea-pots.html">Tea Pots</a></li>
                                 <li><a href="../../accessories/tea-sets.html">Tea Sets</a></li>
                             </ul>
@@ -142,8 +142,8 @@
                    </div><!-- panel-group col-sm-6 mobile-space -->
                     <form>
                         <div class="form-group col-sm-3 dropdown-small">
-                            <label for="selectQuanity">Quanity</label>
-                            <select class="form-control" id="selectQuanity">
+                            <label for="selectQuantity">Quantity</label>
+                            <select class="form-control" id="selectQuantity">
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -301,8 +301,8 @@
                                                 </button>
                                             </div><!-- review-block-rate -->
                                             <div class="review-block-title">Made me a fighting machine!</div>
-                                            <div class="review-block-description">I love this tea! It tastes and smells delicious and does keep me entergized! I order tons of the stuff. This tea also helped me gain muscles!
-                                            Definelty recommend this product!</div>
+                                            <div class="review-block-description">I love this tea! It tastes and smells delicious and does keep me energized! I order tons of the stuff. This tea also helped me gain muscles!
+                                            Definitely recommend this product!</div>
                                         </div><!-- col-sm-9 -->
                                     </div><!-- row -->
                                     <hr/>
@@ -331,7 +331,7 @@
                                                 </button>
                                             </div><!-- review-block-rate -->
                                             <div class="review-block-title">Great pick me up</div>
-                                            <div class="review-block-description">Kooky for Tea does keep to their word that Fightin' Machine keeps you entergized, but maybe a little too much for my taste.
+                                            <div class="review-block-description">Kooky for Tea does keep to their word that Fightin' Machine keeps you energized, but maybe a little too much for my taste.
                                             Other than that, I think the tea is great and I think the name of the tea is hilarious! </div>
                                         </div><!-- col-sm-9 -->
                                     </div><!-- row -->
