--- a/TeaEcommerceWebsite/tea/exotic-tea/wildberry-mania.html
+++ b/TeaEcommerceWebsite/tea/exotic-tea/wildberry-mania.html
@@ -46,7 +46,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../../tea.html">All Tea Products</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Tea Catagories</li>
+                                <li class="dropdown-header">Tea Categories</li>
                                 <li><a href="../../tea/black-tea.html">Black Tea</a></li>
                                 <li><a href="../../tea/green-tea.html">Green Tea</a></li>
                                 <li><a href="../../tea/exotic-tea.html">Exotic Tea</a></li>
@@ -60,7 +60,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../../accessories.html">All Accessories</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Catagories</li>
+                                <li class="dropdown-header">Categories</li>
                                 <li><a href="../../accessories/tea-pots.html">Tea Pots</a></li>
                                 <li><a href="../../accessories/tea-sets.html">Tea Sets</a></li>
                             </ul>
@@ -94,7 +94,7 @@
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../../tea.html">Tea</a></li>
                         <li><a href="../exotic-tea.html">Exotic Tea</a></li>
-                        <li>Wildberry Maina</li>
+                        <li>Wildberry Mania</li>
                     </ol>
                 </section>
             </div><!-- row -->
@@ -141,8 +141,8 @@
                    </div><!-- panel-group col-sm-6 mobile-space-->
                     <form>
                         <div class="form-group col-sm-3 dropdown-small">
-                            <label for="selectQuanity">Quanity</label>
-                            <select class="form-control" id="selectQuanity">
+                            <label for="selectQuantity">Quantity</label>
+                            <select class="form-control" id="selectQuantity">
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
