--- a/TeaEcommerceWebsite/tea/green-tea/savory-greens.html
+++ b/TeaEcommerceWebsite/tea/green-tea/savory-greens.html
@@ -46,7 +46,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../../tea.html">All Tea Products</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Tea Catagories</li>
+                                <li class="dropdown-header">Tea Categories</li>
                                 <li><a href="../black-tea.html">Black Tea</a></li>
                                 <li><a href="../green-tea.html">Green Tea</a></li>
                                 <li><a href="../exotic-tea.html">Exotic Tea</a></li>
@@ -60,7 +60,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="../../accessories.html">All Accessories</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Catagories</li>
+                                <li class="dropdown-header">Categories</li>
                                 <li><a href="../../accessories/tea-pots.html">Tea Pots</a></li>
                                 <li><a href="../../accessories/tea-sets.html">Tea Sets</a></li>
                             </ul>
@@ -134,15 +134,15 @@
                                </h4>
                            </div><!-- panel-heading -->
                              <div id="collapse1" class="panel-collapse collapse">
-                               <div class="panel-body"><p>This green tea is here to give you a nice, warm feeling as you drink it. It sastifies all of the senses making this tea great for everyone!</p>
+                               <div class="panel-body"><p>This green tea is here to give you a nice, warm feeling as you drink it. It satisfies all of the senses making this tea great for everyone!</p>
                                 </div><!-- panel-body -->
                              </div><!--panel-collapse collapse -->
                          </div><!-- panel panel-default -->
                    </div><!-- panel-group col-sm-6 mobile-space -->
                     <form>
                         <div class="form-group col-sm-3 dropdown-small">
-                            <label for="selectQuanity">Quanity</label>
-                            <select class="form-control" id="selectQuanity">
+                            <label for="selectQuantity">Quantity</label>
+                            <select class="form-control" id="selectQuantity">
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
